[package]
name = "quantize"
version = "0.1.0"
authors = ["limzykenneth <hello@limzykenneth.com>"]
edition = "2018"
description = "Quantize image using the MMCQ algorithm"
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
palette_extract = { git = "https://github.com/limzykenneth/palette-extract-rs", branch = "main" }
image = { version = "0.24.5", default-features = false, features = ["gif", "jpeg", "png", "tiff", "bmp", "webp"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
